--- a/src/app/pages/introduction/introduction.component.html
+++ b/src/app/pages/introduction/introduction.component.html
@@ -1,1 +1,12 @@
-<p>introduction works!</p>
+<div class="contact-us">
+  <div class="title-container">
+    <div class="container">
+      <div class="title-text">
+        Giới thiệu
+      </div>
+      <div class="title-route">
+        Trang chủ. <span>Giới thiệu</span>
+      </div>
+    </div>
+  </div>
+</div>
