--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -1,1 +1,12 @@
-<p>sales works!</p>
+<div class="product-list">
+  <div class="title-container">
+    <div class="container">
+      <div class="title-text">
+        Khuyến mãi
+      </div>
+      <div class="title-route">
+        Trang chủ.<span>Khuyến mãi</span>
+      </div>
+    </div>
+  </div>
+</div>
