--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -17,10 +17,10 @@
         <table style="width:100%">
           <thead>
             <tr>
-              <th style="width: 40%;">Product</th>
-              <th style="width: 20%;">Price</th>
-              <th style="width: 20%;">Quantity</th>
-              <th style="width: 20%;">Total</th>
+              <th style="width: 40%;">Sản phẩm</th>
+              <th style="width: 20%;">Giá</th>
+              <th style="width: 20%;">Số lượng</th>
+              <th style="width: 20%;">Tổng</th>
             </tr>
           </thead>
           <tbody>
@@ -63,8 +63,8 @@
             Totals: <span>£219.00</span>
           </div>
 
-          <a type="button" class="form-control" routerLink="checkout">
-            Proceed To Checkout
+          <a type="button" class="form-control" routerLink="/shopping-cart/checkout">
+            Tiến hành thanh toán
           </a>
         </div>
       </div>
@@ -75,7 +75,7 @@
 
 <ng-template #smallProductCard>
   <div class="small-product-card">
-    <img src="../../../assets/images/beidou.jpg" alt="">
+    <img src="https://dung-kun.github.io/cheems-angular-web/assets/images/ganyu-1.png" alt="">
     <div class="content-product">
       <div class="name-product">Beidou</div>
       <div class="property">
