--- a/src/app/theme/header/header.component.html
+++ b/src/app/theme/header/header.component.html
@@ -21,18 +21,9 @@
         <div>
           <ul class="navbar__nav">
             <li class="nav__item">
-              <a class="nav-link" aria-current="page" href="#">
-                <span style="margin: 0;">
-                  English
-                </span>
-                <i class="ai-chevron-down"></i>
-              </a>
-            </li>
-
-            <li class="nav__item">
               <a class="nav-link"  routerLink="/login">
                 <span style="margin: 0;">
-                  Login
+                  Đăng nhập
                 </span>
                 <i class="ai-person"></i>
               </a>
@@ -41,7 +32,7 @@
             <li class="nav__item">
               <a class="nav-link" aria-current="page" href="#">
                 <span style="margin: 0;">
-                  Wishlist
+                  Yêu thích
                 </span>
                 <i class="ai-heart"></i>
               </a>
@@ -64,9 +55,9 @@
       <nav class="navbar nav__botom">
         <a class="nav-link nav__item__header__bottom" aria-current="page" href="#">CheemsStore</a>
         <a class="nav-link nav__item__bottom"  href="#">Trang chủ</a>
-        <a class="nav-link nav__item__bottom" href="#">Giới thiệu</a>
+        <a class="nav-link nav__item__bottom" routerLink="/introduction">Giới thiệu</a>
         <a class="nav-link nav__item__bottom" routerLink="/product-list">Sản phẩm</a>
-        <a class="nav-link nav__item__bottom" href="#">Khuyến mãi</a>
+        <a class="nav-link nav__item__bottom" routerLink="/sales">Khuyến mãi</a>
         <a class="nav-link nav__item__bottom" href="#">Blog</a>
         <a class="nav-link nav__item__bottom" routerLink="/contact-us">Liên hệ</a>
       </nav>
