--- a/src/app/theme/layout/layout.component.scss
+++ b/src/app/theme/layout/layout.component.scss
@@ -14,10 +14,10 @@
   grid-template-rows: auto 1fr auto;
 }
 
-.header-style {
-  position: sticky;
-  top: 0;
-  z-index: 100;
-  background-color: white;
-  box-shadow: 0px 0px 12px rgb(227, 224, 224);
-}
+// .header-style {
+//   position: sticky;
+//   top: 0;
+//   z-index: 100;
+//   background-color: white;
+//   box-shadow: 0px 0px 12px rgb(227, 224, 224);
+// }
