--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import './assets/css/root-style.scss';
 
+@import './assets/css/animation-style.scss';
 
+@import './assets/css/font-style.scss';
 
 body {
   font-family: "Josefin Sans";
