--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   text-align: center;
   background: #FFFFFF;
-  box-shadow: 0px 0px 25px 10px #F8F8FB;
+  box-shadow: 0px 0px 25px 10px #f5f5fc;
   padding: 30px 0;
 
   .login-title {
