--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -2,10 +2,10 @@
   <div class="title-container">
     <div class="container">
       <div class="title-text">
-        Contact Us
+       Liện hệ
       </div>
       <div class="title-route">
-        Route. Page. <span>Contact Us</span>
+       Trang chủ. <span>Liên hệ</span>
       </div>
     </div>
   </div>
@@ -15,7 +15,7 @@
     <div class="about-us">
       <div class="information-us flex-width">
         <div class="title">
-          Information About Us
+          Về chúng tôi
         </div>
         <p class="content">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae eos, unde veniam, reprehenderit sed facilis nulla veritatis assumenda molestias neque blanditiis sint numquam debitis soluta. Ratione nostrum in quod aliquam!
@@ -23,7 +23,7 @@
       </div>
       <div class="contact-way flex-width">
         <div class="title">
-          Contact Way
+          Cách thức liên hệ
         </div>
         <div class="content">
           <div class="circle" style="background-color: #5726DF;"></div>
@@ -42,19 +42,19 @@
     <div class="get-in-touch">
       <div class="flex-width" style="padding: 20px 0;">
         <div class="title">
-          Get In Touch
+          Liên lạc
         </div>
         <div class="content" style="margin-bottom: 20px;">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt impedit cumque molestias deleniti dolores, illum neque quod tempora eum iure deserunt ipsam rem aspernatur beatae. Deserunt perferendis molestiae quaerat nam?
         </div>
         <form>
           <div class="d-flex">
-            <input class="form-control" style="margin-right: 20px;" type="text" placeholder="Your Name">
-            <input class="form-control" type="text" placeholder="Your Email">
+            <input class="form-control" style="margin-right: 20px;" type="text" placeholder="Tên của bạn">
+            <input class="form-control" type="text" placeholder="Email của bạn">
           </div>
-          <input class="form-control" type="text" placeholder="Subject">
-          <textarea class="form-control" name="" id="" cols="30" rows="4" placeholder="Type Your Message*"></textarea>
-          <button class="form-control">Send Mail</button>
+          <input class="form-control" type="text" placeholder="mục">
+          <textarea class="form-control" name="" id="" cols="30" rows="4" placeholder="Tin nhắn của bạn*"></textarea>
+          <button class="form-control">Gửi Mail</button>
         </form>
       </div>
 
