--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,8 +11,8 @@
         <div class="content">
           <div class="description-text flex-width-60">
               <div class="title">
-                New Furniture Collection
-                Trends in 2020
+                Bộ sưu tập "đồ" mới
+                 Xu hướng năm 2022
               </div>
               <div class="text">
                 Lorem ipsum dolor sit, officiis ea vel veritatis enim aspernatur? Soluta tempore id atque placeat aspernatur? Exercitationem tempore impedit, corrupti nobis officia cumque minus nisi!
@@ -32,8 +32,8 @@
         <div class="content">
           <div class="description-text flex-width-60">
               <div class="title">
-                New Furniture Collection
-                Trends in 2020
+                Bộ sưu tập "đồ" mới
+                 Xu hướng năm 2023
               </div>
               <div class="text">
                 Lorem ipsum dolor sit, officiis ea vel veritatis enim aspernatur? Soluta tempore id atque placeat aspernatur? Exercitationem tempore impedit, corrupti nobis officia cumque minus nisi!
@@ -53,8 +53,8 @@
         <div class="content">
           <div class="description-text flex-width-60">
               <div class="title">
-                New Furniture Collection
-                Trends in 2020
+                Bộ sưu tập "đồ" mới
+                 Xu hướng năm 2021
               </div>
               <div class="text">
                 Lorem ipsum dolor sit, officiis ea vel veritatis enim aspernatur? Soluta tempore id atque placeat aspernatur? Exercitationem tempore impedit, corrupti nobis officia cumque minus nisi!
@@ -84,7 +84,7 @@
   <div class="container body-container">
     <div class="content">
       <div class="title">
-        Featured Products
+        Các ứng dụng nổi bật
       </div>
       <div class="list-card">
         <div class="item-style">
