--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,19 +2,19 @@
   <div class="title-container">
     <div class="container">
       <div class="title-text">
-        Login
+        Đăng nhập
       </div>
       <div class="title-route">
-        Route. Page. <span>Login</span>
+        Trang chủ. <span>Đăng nhập</span>
       </div>
     </div>
   </div>
 
   <div class="container m-common">
     <div class="login-content">
-      <div class="login-title">Login</div>
+      <div class="login-title">Đăng nhập</div>
       <div class="login-sub-title">
-        Please login using account detail bellow.
+        Vui lòng nhập chi tiết tài khoản bên dưới.
       </div>
       <form>
         <div class="input-margin">
@@ -25,12 +25,12 @@
         </div>
         <div class="forgot-password">
           <a>
-            Forgot your Password?
+            Quên mật khẩu?
           </a>
         </div>
-        <button type="submit" class="button-submit form-control">Login</button>
+        <button type="submit" class="button-submit form-control">Đăng nhập</button>
         <div class="no-account">
-          Don't have an Account? <a>Create account</a>
+          Bạn chưa có tài khoản? <a>Tạo tài khoản</a>
         </div>
       </form>
     </div>
