--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -2,10 +2,10 @@
   <div class="title-container">
     <div class="container">
       <div class="title-text">
-        Product Details
+        Chi tiết sản phẩm
       </div>
       <div class="title-route">
-        Route. Page. <span>Product Details</span>
+        Trang chủ. <span>Chi tiết sản phẩm</span>
       </div>
     </div>
   </div>
@@ -52,12 +52,12 @@
 
           <div class="add-to-cart">
             <button class="cart-button">
-              Add to Cart
+              Thêm vào giỏ
             </button>
             <i class="fa fa-heart-o"></i>
           </div>
           <div class="item-style">
-            Category: <span>ssss</span>
+            Loại: <span>ssss</span>
           </div>
 
           <div class="item-style">
@@ -69,7 +69,7 @@
     <div class="description">
       <div class="container">
         <div class="title">
-          Description
+          Mô tả
         </div>
         <div class="content">
           <div class="content-title">
@@ -95,7 +95,7 @@
     <div class="related-product">
       <div class="container">
         <div class="title">
-          Related Products
+          Sản phẩm có liên quan
         </div>
         <div class="row">
           <app-property-card class="col-lg-3"></app-property-card>
