--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -2,10 +2,10 @@
   <div class="title-container">
     <div class="container">
       <div class="title-text">
-        Product
+        Sản phẩm
       </div>
       <div class="title-route">
-        Home.<span>Product</span>
+        Trang chủ. <span>Sản phẩm</span>
       </div>
     </div>
   </div>
@@ -22,110 +22,109 @@
                 <li class="item">
                   <a class="link " href="/en_us/women/new-arrivals/view-all.html" role="menuitem"
                     data-tracking-label="view-all">
-                    View All</a>
+                    Xem tất cả</a>
                 </li>
                 <li class="list-group">
                   <a class="link current" href="/en_us/women/new-arrivals/clothes.html" role="menuitem"
                     data-tracking-label="clothes">
-                    Clothes</a>
+                    Laptop</a>
                   <ul class="menu" role="menu" style="display: none">
                   </ul>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/new-arrivals/shoes-accessories.html" role="menuitem"
                     data-tracking-label="shoes-accessories">
-                    Shoes &amp; Accessories</a>
+                    Dell</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/new-arrivals/beauty.html" role="menuitem"
                     data-tracking-label="beauty">
-                    Beauty</a>
+                    Asus</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/new-arrivals/underwear-nightwear.html" role="menuitem"
                     data-tracking-label="underwear-nightwear">
-                    Underwear &amp; Nightwear</a>
+                     Lenovo</a>
                 </li>
               </ul>
             </li>
             <li class="list-group">
-              <strong class="list-group-title " data-tracking-label="seasonal-trending">Holiday &amp; Trending
-                Now</strong>
+              <strong class="list-group-title " data-tracking-label="seasonal-trending">Điện thoại</strong>
               <ul class="menu" role="menu">
                 <li class="item">
                   <a class="link " href="/en_us/women/seasonal-trending/holiday.html" role="menuitem"
                     data-tracking-label="holiday">
-                    The Holiday Shop</a>
+                    Iphone</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/seasonal-trending/winter.html" role="menuitem"
                     data-tracking-label="winter">
-                    Winter must-haves</a>
+                    Realme</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/seasonal-trending/trend-edit.html" role="menuitem"
                     data-tracking-label="trend-concept">
-                    Trend edit</a>
+                    Oppo</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/seasonal-trending/neutrals.html" role="menuitem"
                     data-tracking-label="neutral">
-                    A new minimalism</a>
+                    XSMax</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/seasonal-trending/y2k-fashion.html" role="menuitem"
                     data-tracking-label="y2k">
-                    Y2K fashion</a>
+                    Samsung</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/seasonal-trending/autumn1.html" role="menuitem"
                     data-tracking-label="autumn1">
-                    Sunny Styles</a>
+                    Nokia</a>
                 </li>
               </ul>
             </li>
             <li class="list-group">
-              <strong class="list-group-title " data-tracking-label="deals">Offers</strong>
+              <strong class="list-group-title " data-tracking-label="deals">Đồ điện</strong>
               <ul class="menu" role="menu">
                 <li class="item">
                   <a class="link " href="/en_us/women/deals/student-discount-get-15-off.html" role="menuitem"
                     data-tracking-label="student-discount-get-15-off">
-                    Student Discount</a>
+                    Nồi cơm điện</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/deals/sale-view-all.html" role="menuitem"
                     data-tracking-label="sale-view-all">
-                    Black Friday deals up to 70% off</a>
+                    Lò vi sóng</a>
                 </li>
               </ul>
             </li>
             <li class="list-group">
-              <strong class="list-group-title " data-tracking-label="gift-cards">Gifting</strong>
+              <strong class="list-group-title " data-tracking-label="gift-cards">Quà tặng</strong>
               <ul class="menu" role="menu">
                 <li class="item">
                   <a class="link " href="/en_us/women/gift-cards/gift-card.html" role="menuitem"
                     data-tracking-label="gift-card">
-                    Gift Cards</a>
+                    Thẻ quà tặng</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/gift-cards/gift-guide.html" role="menuitem"
                     data-tracking-label="gift-guide">
-                    Gift Guide</a>
+                    Hướng dẫn</a>
                 </li>
               </ul>
             </li>
             <li class="list-group">
-              <strong class="list-group-title " data-tracking-label="sustainability">Sustainability</strong>
+              <strong class="list-group-title " data-tracking-label="sustainability">Mở rộng</strong>
               <ul class="menu" role="menu">
                 <li class="item">
                   <a class="link " href="/en_us/women/sustainability/take-care.html" role="menuitem"
                     data-tracking-label="take-care">
-                    H&amp;M Take Care</a>
+                    Chăm sóc khách hàng</a>
                 </li>
                 <li class="item">
                   <a class="link " href="/en_us/women/sustainability/learn-more.html" role="menuitem"
                     data-tracking-label="learn-more">
-                    Learn More</a>
+                    Tìm hiểu thêm</a>
                 </li>
               </ul>
             </li>
@@ -160,7 +159,7 @@
             </div>
             <div class="sort-by">
               <select class="form-select">
-                <option selected hidden>Sorted by</option>
+                <option selected hidden>Lọc</option>
                 <option value="1">Giá giảm</option>
                 <option value="2">Giá tăng</option>
                 <option value="3">Three</option>
