--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -2,10 +2,10 @@
   <div class="title-container">
     <div class="container">
       <div class="title-text">
-        Shopping Cart
+        Giỏ hàng
       </div>
       <div class="title-route">
-        Route. Page. <span>Shopping Cart</span>
+        Trang chủ. <span>Giỏ hàng</span>
       </div>
     </div>
   </div>
@@ -18,7 +18,7 @@
           <thead>
             <tr>
               <th style="width: 40%;">Sản phẩm</th>
-              <th style="width: 20%;">Giá</th>
+              <th style="width: 20%;">Giá (VND)</th>
               <th style="width: 20%;">Số lượng</th>
               <th style="width: 20%;">Tổng</th>
             </tr>
@@ -26,41 +26,41 @@
           <tbody>
             <tr>
               <td ><ng-container *ngTemplateOutlet="smallProductCard"></ng-container></td>
-              <td>Maria Anders</td>
-              <td>Germany</td>
-              <td>Germany</td>
+              <td>10.000</td>
+              <td>1</td>
+              <td>10.000</td>
             </tr>
             <tr>
               <td><ng-container *ngTemplateOutlet="smallProductCard"></ng-container></td>
-              <td>Maria Anders</td>
-              <td>Germany</td>
-              <td>Germany</td>
+              <td>12.000</td>
+              <td>1</td>
+              <td>12.000</td>
             </tr>
             <tr>
               <td><ng-container *ngTemplateOutlet="smallProductCard"></ng-container></td>
-              <td>Maria Anders</td>
-              <td >Germany</td>
-              <td>Germany</td>
+              <td>14.000</td>
+              <td >1</td>
+              <td>14.000</td>
             </tr>
             <tr>
               <td><ng-container *ngTemplateOutlet="smallProductCard"></ng-container></td>
-              <td>Maria Anders</td>
-              <td>Germany</td>
-              <td>Germany</td>
+              <td>16.000</td>
+              <td>1</td>
+              <td>16.000</td>
             </tr>
           </tbody>
         </table>
       </div>
       <div class="col-lg-4 cart-total-style">
         <div class="title">
-          Cart Total
+          Tổng giỏ hàng
         </div>
         <div class="container">
           <div class="total-style">
-            Subtotals: <span>£219.00</span>
+            Tổng phụ: <span>52.000(VND)</span>
           </div>
           <div class="total-style">
-            Totals: <span>£219.00</span>
+            Tổng: <span>52.000(VND)</span>
           </div>
 
           <a type="button" class="form-control" routerLink="/shopping-cart/checkout">
