feat: updated change language deploy app again
updated some pages

updated some pages

--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="flex-width">
-        <img style="width: 90%;" src="../../../assets/images/contact-us-image.jpg" alt="">
+        <img style="width: 90%;" src="https://dung-kun.github.io/cheems-angular-web/assets/images/contact-us-image.jpg" alt="">
       </div>
     </div>
   </div>
