--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -18,10 +18,10 @@
       </div>
       <form>
         <div class="input-margin">
-          <input class="form-control" type="text" placeholder="Email Address">
+          <input class="form-control" type="text" placeholder="Địa chỉ Email">
         </div>
         <div class="input-margin">
-          <input class="form-control" type="text" placeholder="Password">
+          <input class="form-control" type="text" placeholder="Mật khẩu">
         </div>
         <div class="forgot-password">
           <a>
