--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -17,17 +17,17 @@
         <nav class="secondary-nav">
           <ul id="menu-links" role="menubar">
             <li class="list-group">
-              <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">New Arrivals</strong>
+              <strong class="list-group-title is-opened" data-tracking-label="new-arrivals">Laptop</strong>
               <ul class="menu" role="menu">
                 <li class="item">
                   <a class="link " href="/en_us/women/new-arrivals/view-all.html" role="menuitem"
                     data-tracking-label="view-all">
-                    Xem tất cả</a>
+                    Mac</a>
                 </li>
                 <li class="list-group">
                   <a class="link current" href="/en_us/women/new-arrivals/clothes.html" role="menuitem"
                     data-tracking-label="clothes">
-                    Laptop</a>
+                    HP</a>
                   <ul class="menu" role="menu" style="display: none">
                   </ul>
                 </li>
